# unikernal-honeynet

./: .gitignore  README.md  bootstrap_deps.py
analyst-web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
analyst-web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
analyst-web/src-tauri/: Cargo.toml  tauri.conf.json
analyst-web/src-tauri/capabilities/: default.json
analyst-web/src-tauri/src/: main.rs
collector/: app.py  requirements.txt  schema.sql
collector/templates/: index.html
container-baseline/: Dockerfile  app.py  docker-compose.yml
dashboard/: dashboard.py  report.py
deploy/dev/: docker-compose.yml
deploy/k8s/: README.md  values-dev.yaml  values-prod.yaml  values-staging.yaml
docs/: architecture.md  deployment-patterns.md  desktop-app.md  experiment-plan.md  local-lan-exposure.md  operating-model.md  product-positioning.md  reference-architecture.md  security-and-governance.md  setup.md
edge_relay/: app.py
ingest_api/: Dockerfile  __init__.py  alembic.ini  config.py  database.py  main.py  metrics.py  models.py  object_store.py  pyproject.toml  reporting.py  schemas.py  security.py  services.py  worker.py
ingest_api/alembic/: env.py
ingest_api/alembic/versions/: 0001_initial.py  0002_enterprise_v2.py
ingest_api/tests/: test_services.py
scripts/: attack_sim.sh  benchmark.sh  build_unikernel.sh  expose_decoys_lan.ps1  hide_decoys_lan.ps1  launch_instances.sh  repair_edge_env.sh  reset_instances.sh  setup_host.sh  sync_wsl_portproxy.ps1
unikernel-decoy/: Dockerfile  Kraftfile  notes.md
(+50 files in other folders)
