[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest-api"
version = "0.1.0"
description = "Production control-plane ingest and query API for the unikernel honeynet"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "boto3>=1.36,<2",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.setuptools]
packages = ["ingest_api"]
