[package]
name = "honeynet-analyst"
version = "0.1.0"
description = "Native analyst console for the Enterprise Honeynet control plane"
authors = ["Enterprise Honeynet"]
edition = "2021"
license = "Apache-2.0"
repository = ""

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
